# vl

./: Cargo.toml  index.html  package.json  tailwind.config.js
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: BlowerControl.vue  Navigation.vue  Temerature.vue  UtilityBar.vue
